my changes with details

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,15 +28,15 @@
   <div class="aboutme-wrapper">
     <div class="svg-wrapper-me">
       <!-- EDIT CONTENT BELOW -->
-        <img class="photo-me" src="../../../assets/headshot.jpg" />
-        <h5 class="aboutme-context"><span class='highlight'><strong>Hey!</strong> I'm Zach, a <strong>Data Engineer</strong> passionate about [...].</span></h5>
+        <img class="photo-me" src="../../../assets/nik_profile_pic.jpg" />
+        <h5 class="aboutme-context"><span class='highlight'><strong>Hey!</strong> I'm Nikhil, a <strong>Senior Software Engineer/Data Scientist</strong> Extensive 7 years of experience, leading to automate and implement rigorous software solutions in various domains. Always involves in mind teasing challenges to automate and develop the particular business process in cohesively and scalable solutions. I am passionate about learning and working on the latest technologies environment to enhance solutions.</span></h5>
         <a href='/resume'  class="waves-effect waves-light btn square-btn navigate">My Resume</a>
       </div>
     <div class="callout-wrapper">
       <div class="svg-wrapper-callout1" >
         <div class="call-out">
             <!-- EDIT CONTENT BELOW -->
-          <h5 class="aboutme-context"><span class='highlight'>Callout box</span></h5>  
+          <h5 class="aboutme-context"><span class='highlight'>Callout box</span></h5>
         </div>
       </div>
       <div class="svg-wrapper-callout2">
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-   
+
   <div class="project_four_context">
     <div class='proj-wrapper'>
       <p class="project_description">
@@ -114,7 +114,7 @@
   </div>
   <div class="project_four">
   </div>
-    
+
 
     <div class="project_five">
     </div>
@@ -148,7 +148,7 @@
         <a href='###'  class="waves-effect waves-light btn square-btn navigate">Read more</a>
       </div>
     </div>
-    
+
     <div class="project_two">
     </div>
     <div class="project_two_context">
@@ -199,7 +199,7 @@
       </div>
     </div>
   </div>
-</div> 
+</div>
 
 <!-- Medium Post section (the Medium widget should already be loaded, just edit the handle below) -->
 <!-- EDIT CONTENT BELOW -->
